--- a/views/layout.erb
+++ b/views/layout.erb
@@ -3,7 +3,7 @@
   <head>
     <title>Make a Word Foundation</title>
     <link rel='stylesheet' href='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css'>
-    <%# <link rel="stylesheet" href="/styles.css"> %>
+    <link rel="stylesheet" href="/styles.css">
 
   </head>
   <body>
