--- a/public/styles.css
+++ b/public/styles.css
@@ -1,3 +1,21 @@
 h1 {
   color: #006bb7;
+  text-align: center;
+  font-size: 4vmax;
+  margin-bottom: 0px;
+}
+
+.epicodus {
+  color: #006bb7;
+  text-align: center;
+  font-size: 1.5vmax;
+  padding-top: 0px;
+}
+
+.toolbar {
+  color: #ffffff;
+  text-align: center;
+  font-size: 2vmax;
+  padding: 5px;
+  margin: 0px;
 }
