update views for consistant elements and classes.

--- a/views/layout.erb
+++ b/views/layout.erb
@@ -14,7 +14,7 @@
 
       <div class="row">
         <div class="col-md-4">
-          <a href="/words"><p class="btn-lg btn-primary toolbar">Words</p></a>
+          <a href="/words"><p class="btn-lg btn-primary toolbar">All Words</p></a>
         </div>
         <div class="col-md-4">
           <p class="toolbar"></p>
@@ -22,7 +22,7 @@
 
         </div>
         <div class="col-md-4">
-          <a href="/words" action="/words" method="get"><p name="clear" class="btn-lg btn-primary toolbar">Clear All</p></a>
+  
         </div>
       </div>
       <hr>
